...
                            <constraint firstAttribute="trailing" secondItem="eLR-lc-hFl" secondAttribute="trailing" id="Obr-VT-Mht"/>
                            <constraint firstItem="eLR-lc-hFl" firstAttribute="leading" secondItem="pg8-Qe-GjM" secondAttribute="leading" id="aVW-Ld-Bhe"/>
                            <constraint firstItem="mPq-KQ-vfY" firstAttribute="top" secondItem="eLR-lc-hFl" secondAttribute="bottom" id="azg-hs-NfZ"/>
                            <constraint firstItem="eLR-lc-hFl" firstAttribute="top" secondItem="pg8-Qe-GjM" secondAttribute="top" id="hI8-1p-tfh"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Products" id="0ln-y5-HXz">
                        <barButtonItem key="rightBarButtonItem" enabled="NO" image="basketIcon" id="Asb-gE-7mL">
                            <connections>
                                <segue destination="pe9-q6-yJd" kind="show" id="Rrt-kM-dR3"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
...
