...
    
    let refreshControl = UIRefreshControl()
    
    override func viewDidLoad() {
        super.viewDidLoad()
        
        title = "Basket"
        
        if let bag = bag {
            totalAmountLabel.text = "total: \(bag.totalPrice.asString)"
        } else {
            totalAmountLabel.text = "-"
        }
...
